[package]
name = "fakeblok"
version = "0.0.0"
authors = ["Adam Wright <shaladdle@gmail.com>", "Tim Kuehn <timothy.j.kuehn@gmail.com>"]
keywords = []
edition = "2018"

[dependencies]
piston_window = "0.104.0"
log = "0.4"
pretty_env_logger = "0.3"
tarpc = { version = "0.20", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3" }
clap = "2.0"
once_cell = "1.0"
tokio = { version = "0.2", features = ["sync"] }
tokio-serde = { version = "0.6", features = ["json"] }
slab = "=0.4.2"
rand = "0.7.2"
